unpackaged/main/default/objects/Case/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <formula>AutomationBypassDateTime__c &gt;NOW()-0.00005787037 /*five seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Automation Bypassed</label>
    <type>Checkbox</type>
</CustomField>