unpackaged/main/default/objects/Case/fields/Is_Existing_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Is_Existing_Purchase__c</fullName>
    <description>This field is created to keep information about the purchase is Existing or Not</description>
    <label>Is Existing Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>