unpackaged/main/default/objects/Case/fields/Is_Existing_Purchase_READONLY__c.field-meta.xml
<CustomField>
    <fullName>Is_Existing_Purchase_READONLY__c</fullName>
    <description>This READONLY field is created to store customers original details filled through web form</description>
    <label>Is Existing Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>