unpackaged/main/default/objects/Case/fields/Is_Milestone_Violated__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone_Violated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone Violated</label>
    <type>Checkbox</type>
</CustomField>