unpackaged/main/default/objects/Case/fields/IsChild__c.field-meta.xml
<CustomField>
    <fullName>IsChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChild</label>
    <type>Checkbox</type>
</CustomField>