unpackaged/main/default/objects/Case/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <description>Used to track the last time a status was changed to open in order to properly assign case to either a zQueue or the originating queue.</description>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>