unpackaged/main/default/objects/Case/fields/Legal_Risk_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Legal_Risk_Reasons__c</fullName>
    <label>Legal/Risk Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk Claims</fullName>
            </value>
            <value>
                <fullName>Incident Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>