unpackaged/main/default/objects/Case/fields/Loyalty_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Account_Number__c</fullName>
    <label>Loyalty Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>