unpackaged/main/default/objects/Case/fields/Loyalty_Id__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Id__c</fullName>
    <label>Loyalty Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>