unpackaged/main/default/objects/Case/fields/LoyaltyComments__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyComments__c</fullName>
    <label>Loyalty Comments</label>
    <type>TextArea</type>
</CustomField>