unpackaged/main/default/objects/Case/fields/Macro_Subject__c.field-meta.xml
<CustomField>
    <fullName>Macro_Subject__c</fullName>
    <formula>IF( Subject = &quot; &quot;, &#39;Case # &#39; + CaseNumber, Subject + &#39; &#39; + &#39;Case # &#39; + CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro Subject</label>
    <type>Text</type>
</CustomField>