unpackaged/main/default/objects/Case/fields/Multiple_Offender__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Offender__c</fullName>
    <formula>IF(  Contact.Multiple_Offender_Contact__c  = TRUE, 
    (IMAGE(&quot;https://pvhservicecloud--qapro--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682C000001Gj8O&amp;operationContext=CHATTER&amp;contentId=05T2C000006toXn&quot;,
    &quot;text&quot;, 100, 100)),
&quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Offender</label>
    <type>Text</type>
</CustomField>