unpackaged/main/default/objects/Case/fields/narvar__Narvar_Incident__c.field-meta.xml
<CustomField>
    <fullName>narvar__Narvar_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Narvar Incident Number</label>
    <referenceTo>narvar__Narvar_Incident__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>