unpackaged/main/default/objects/Case/fields/New_LoyaltyId__c.field-meta.xml
<CustomField>
    <fullName>New_LoyaltyId__c</fullName>
    <label>New LoyaltyId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>