unpackaged/main/default/objects/Case/fields/NFCaseScenario__c.field-meta.xml
<CustomField>
    <fullName>NFCaseScenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to categorize the Case</description>
    <label>Case Scenario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NF_Case_Scenario__c.NFActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NF_Case_Scenario__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>