unpackaged/main/default/objects/Case/fields/Number_of_Days_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Resolve__c</fullName>
    <description>Calculation to define number of days it took to resolve case. Used for CCPA reports.</description>
    <formula>Resolved_Date__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>