unpackaged/main/default/objects/Case/fields/NumberDialed__c.field-meta.xml
<CustomField>
    <fullName>NumberDialed__c</fullName>
    <description>Number Dialed</description>
    <label>NumberDialed</label>
    <type>Phone</type>
</CustomField>