unpackaged/main/default/objects/Case/fields/Observation_Form__c.field-meta.xml
<CustomField>
    <fullName>Observation_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Observation Form Number</description>
    <label>Observation Form</label>
    <referenceTo>Observation_Form__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>