unpackaged/main/default/objects/Case/fields/Observation_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Observation_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observation Form Complete</label>
    <type>Checkbox</type>
</CustomField>