unpackaged/main/default/objects/Case/fields/Observation_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Observation_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates wether an Observation Form has been submitted for the case.</description>
    <label>Observation Form Submitted</label>
    <type>Checkbox</type>
</CustomField>