unpackaged/main/default/objects/Case/fields/Originating_Queue__c.field-meta.xml
<CustomField>
    <fullName>Originating_Queue__c</fullName>
    <label>Originating Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>