unpackaged/main/default/objects/Case/fields/Originating_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Originating_Queue_Id__c</fullName>
    <label>Originating Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>