unpackaged/main/default/objects/Case/fields/Parent_Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Sub_Type__c</fullName>
    <formula>TEXT(Parent.Sub_Type__c)</formula>
    <label>Parent Case Sub Type</label>
    <type>Text</type>
</CustomField>