unpackaged/main/default/objects/Case/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <description>Parent ID used in Case List View Filter for Observation Forms To Fill Out</description>
    <formula>ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>