unpackaged/main/default/objects/Case/fields/PendingPointsAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PendingPointsAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Points Adjustment</label>
    <type>Checkbox</type>
</CustomField>