unpackaged/main/default/objects/Case/fields/Percent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_Amount__c</fullName>
    <label>Percent Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>