unpackaged/main/default/objects/Case/fields/Perfect_Match_Found__c.field-meta.xml
<CustomField>
    <fullName>Perfect_Match_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Perfect Match was found for the privacy request</description>
    <label>Perfect Match Found</label>
    <type>Checkbox</type>
</CustomField>