unpackaged/main/default/objects/Case/fields/Personal_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Personal_Queue_Id__c</fullName>
    <formula>Owner:User.Personal_Queue_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Queue Id</label>
    <type>Text</type>
</CustomField>