unpackaged/main/default/objects/Case/fields/Place_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Purchase__c</fullName>
    <label>Place of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Nordstrom</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>