unpackaged/main/default/objects/Case/fields/PointsAdjustmentTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>PointsAdjustmentTimeStamp__c</fullName>
    <label>Points Adjustment TimeStamp</label>
    <type>DateTime</type>
</CustomField>