unpackaged/main/default/objects/Case/fields/PointsGranted__c.field-meta.xml
<CustomField>
    <fullName>PointsGranted__c</fullName>
    <label>Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>