unpackaged/main/default/objects/Case/fields/PR_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>PR_Social_Media__c</fullName>
    <label>PR/Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Escalation</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (Asia)</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (AZND)</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (CA)</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (EU)</fullName>
            </value>
            <value>
                <fullName>Customer Complaint (US)</fullName>
            </value>
            <value>
                <fullName>Public Relations Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>