unpackaged/main/default/objects/Case/fields/Privacy_Case_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Case_Resolved_Date__c</fullName>
    <description>The date where the case was resolved. After some hours, configured in custom settings, the case will be closed</description>
    <label>Privacy Case Resolved Date</label>
    <type>DateTime</type>
</CustomField>