unpackaged/main/default/objects/Case/fields/Privacy_Date_Consumer_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Date_Consumer_Last_Contacted__c</fullName>
    <description>The date where the consumer was contacted for additional information. After some hours, configured in custom settings, the case will be closed if the consumer does not respond.</description>
    <label>Privacy Date Consumer Last Contacted</label>
    <type>DateTime</type>
</CustomField>