unpackaged/main/default/objects/Case/fields/Privacy_Last_Contacted_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Last_Contacted_Formatted__c</fullName>
    <formula>IF(!ISBLANK(Privacy_Date_Consumer_Last_Contacted__c),
LEFT(TEXT(Privacy_Date_Consumer_Last_Contacted__c), 10),
&#39;&#39;)</formula>
    <label>Privacy Last Contacted Formatted</label>
    <type>Text</type>
</CustomField>