unpackaged/main/default/objects/Case/fields/Privacy_URLforRESTAPIResponse__c.field-meta.xml
<CustomField>
    <fullName>Privacy_URLforRESTAPIResponse__c</fullName>
    <formula>$CustomMetadata.PrivacyBrandSetting__mdt.default.URL_for_REST_API_Requests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL for REST API Response</label>
    <type>Text</type>
</CustomField>