unpackaged/main/default/objects/Case/fields/Privacy_User_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Privacy_User_Confirmed_Date__c</fullName>
    <description>The date that the user confirmed their privacy request</description>
    <label>Privacy User Confirmed Date</label>
    <type>DateTime</type>
</CustomField>