unpackaged/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>This field is used to store Product Category</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Swimwear</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Competition Swimwear</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Activewear</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Footwear</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Swimwear</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Competition Swimwear</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Activewear</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Footwear</fullName>
            </value>
            <value>
                <fullName>Girl&#39;s Swimwear</fullName>
            </value>
            <value>
                <fullName>Boy&#39;s Swimwear</fullName>
            </value>
            <value>
                <fullName>Kid&#39;s Footwear</fullName>
            </value>
            <value>
                <fullName>Goggles</fullName>
            </value>
            <value>
                <fullName>Gear</fullName>
            </value>
            <value>
                <fullName>Bra &amp; Underwear Collection</fullName>
            </value>
            <value>
                <fullName>Bra</fullName>
            </value>
            <value>
                <fullName>Underwear</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Apparel</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Accessories</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Underwear</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Apparel</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Accessories</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Underwear</fullName>
            </value>
            <value>
                <fullName>Boy&#39;s Apparel</fullName>
            </value>
            <value>
                <fullName>Girl&#39;s Apparel</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Collections</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Collections</fullName>
            </value>
            <value>
                <fullName>Boy&#39;s Apparel &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Girl&#39;s Apparel &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Tommy Adaptive Boys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>