unpackaged/main/default/objects/Case/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bikinis &amp; Separates</fullName>
            </value>
            <value>
                <fullName>One Piece Swimsuits</fullName>
            </value>
            <value>
                <fullName>Rash Guards</fullName>
            </value>
            <value>
                <fullName>Swim Bottoms</fullName>
            </value>
            <value>
                <fullName>Tankinis</fullName>
            </value>
            <value>
                <fullName>Triathlon &amp; Wetsuits</fullName>
            </value>
            <value>
                <fullName>Elite Technical Swimsuits</fullName>
            </value>
            <value>
                <fullName>Parkas</fullName>
            </value>
            <value>
                <fullName>Racing &amp; Practice Swimsuits</fullName>
            </value>
            <value>
                <fullName>Team Apparel</fullName>
            </value>
            <value>
                <fullName>Jackets</fullName>
            </value>
            <value>
                <fullName>Joggers</fullName>
            </value>
            <value>
                <fullName>Pants &amp; Leggings</fullName>
            </value>
            <value>
                <fullName>Shorts</fullName>
            </value>
            <value>
                <fullName>Swim Tees</fullName>
            </value>
            <value>
                <fullName>Flip-flop</fullName>
            </value>
            <value>
                <fullName>Water Shoe</fullName>
            </value>
            <value>
                <fullName>Briefs</fullName>
            </value>
            <value>
                <fullName>Jammers</fullName>
            </value>
            <value>
                <fullName>Square Legs</fullName>
            </value>
            <value>
                <fullName>Swim Trunks &amp; Boardshorts</fullName>
            </value>
            <value>
                <fullName>Team Warmups</fullName>
            </value>
            <value>
                <fullName>Tops &amp; Tanks</fullName>
            </value>
            <value>
                <fullName>Begin To Swim</fullName>
            </value>
            <value>
                <fullName>One- Piece Suits</fullName>
            </value>
            <value>
                <fullName>Board shorts</fullName>
            </value>
            <value>
                <fullName>Volleys</fullName>
            </value>
            <value>
                <fullName>Adult Goggles</fullName>
            </value>
            <value>
                <fullName>Elite Goggles</fullName>
            </value>
            <value>
                <fullName>Jr. Goggles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>