unpackaged/main/default/objects/Case/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online - calvinklein.com</fullName>
            </value>
            <value>
                <fullName>Online - tommy.com</fullName>
            </value>
            <value>
                <fullName>Online - vanheusen.com</fullName>
            </value>
            <value>
                <fullName>Online - styleBureau.com</fullName>
            </value>
            <value>
                <fullName>Online - izod.com</fullName>
            </value>
            <value>
                <fullName>Online - trueandco.com</fullName>
            </value>
            <value>
                <fullName>Online - speedo.com</fullName>
            </value>
            <value>
                <fullName>Calvin Klein store</fullName>
            </value>
            <value>
                <fullName>Tommy Hilfiger store</fullName>
            </value>
            <value>
                <fullName>Van Heusen store</fullName>
            </value>
            <value>
                <fullName>Other Retailer</fullName>
            </value>
            <value>
                <fullName>Online-CalvinKlein Canada</fullName>
            </value>
            <value>
                <fullName>Online-Warner&#39;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>