unpackaged/main/default/objects/Case/fields/Queue_for_Rerouting__c.field-meta.xml
<CustomField>
    <fullName>Queue_for_Rerouting__c</fullName>
    <inlineHelpText>Use this field to reroute the Case to the correct Queue and update the Originating Queue.</inlineHelpText>
    <label>Queue for Rerouting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>