unpackaged/main/default/objects/Case/fields/R2R_Email_UserConfirmation__c.field-meta.xml
<CustomField>
    <fullName>R2R_Email_UserConfirmation__c</fullName>
    <label>Email User Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>