unpackaged/main/default/objects/Case/fields/Ready_for_Bulk_Email__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Bulk_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ready for Bulk Email</description>
    <label>Ready for Bulk Email</label>
    <type>Checkbox</type>
</CustomField>