unpackaged/main/default/objects/Case/fields/Reason_Code_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Details__c</fullName>
    <label>Reason Code Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accepted Forms of Payment</fullName>
            </value>
            <value>
                <fullName>Account Information (Member ID)</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Account Issue (Godzilla, Dummy Account)</fullName>
            </value>
            <value>
                <fullName>Account Issue (Loyalty Flag)</fullName>
            </value>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Account Registration Error</fullName>
            </value>
            <value>
                <fullName>Adaptive</fullName>
            </value>
            <value>
                <fullName>Address Error</fullName>
            </value>
            <value>
                <fullName>Associate Discount</fullName>
            </value>
            <value>
                <fullName>Authorization Hold</fullName>
            </value>
            <value>
                <fullName>Balance Confirmation (Points/Rewards)</fullName>
            </value>
            <value>
                <fullName>BBB Complaint</fullName>
            </value>
            <value>
                <fullName>Black Friday Complaint</fullName>
            </value>
            <value>
                <fullName>Brand Protection</fullName>
            </value>
            <value>
                <fullName>Bulk Buyer Warning</fullName>
            </value>
            <value>
                <fullName>Business Solicitation</fullName>
            </value>
            <value>
                <fullName>Call/Chat Disconnect</fullName>
            </value>
            <value>
                <fullName>Cancelled Item</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
            <value>
                <fullName>Cancel Order Request</fullName>
            </value>
            <value>
                <fullName>Care Instructions</fullName>
            </value>
            <value>
                <fullName>Check Complaint</fullName>
            </value>
            <value>
                <fullName>Check Inventory/Restock Inquiry</fullName>
            </value>
            <value>
                <fullName>Check-out Error (Non-Fraud/Payment)</fullName>
            </value>
            <value>
                <fullName>Claim Status</fullName>
            </value>
            <value>
                <fullName>Contest/Sweepstakes</fullName>
            </value>
            <value>
                <fullName>Corporate Outfitters Request</fullName>
            </value>
            <value>
                <fullName>Corporate Responsibility</fullName>
            </value>
            <value>
                <fullName>Corp Social Responsibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>