unpackaged/main/default/objects/Case/fields/Reason_Code_Manufacturers__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Manufacturers__c</fullName>
    <label>Reason Code Manufacturers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessory Network</fullName>
            </value>
            <value>
                <fullName>American Essentials</fullName>
            </value>
            <value>
                <fullName>Basic Resources (VH Socks)</fullName>
            </value>
            <value>
                <fullName>BCNY</fullName>
            </value>
            <value>
                <fullName>Calvin Klein Sportswear</fullName>
            </value>
            <value>
                <fullName>ClearVision Optical</fullName>
            </value>
            <value>
                <fullName>COTY</fullName>
            </value>
            <value>
                <fullName>Customer Leather</fullName>
            </value>
            <value>
                <fullName>Cutie Pie Baby (100364)</fullName>
            </value>
            <value>
                <fullName>Delta Galil</fullName>
            </value>
            <value>
                <fullName>Estee</fullName>
            </value>
            <value>
                <fullName>Fishman &amp; Tobin (477)</fullName>
            </value>
            <value>
                <fullName>Fletcher</fullName>
            </value>
            <value>
                <fullName>G-III Apparel Group (54163)</fullName>
            </value>
            <value>
                <fullName>Global Brands Group</fullName>
            </value>
            <value>
                <fullName>Harbor Footwear</fullName>
            </value>
            <value>
                <fullName>Himatsingka (33699)</fullName>
            </value>
            <value>
                <fullName>Internal Wholesale</fullName>
            </value>
            <value>
                <fullName>Jimlar</fullName>
            </value>
            <value>
                <fullName>Kayser-Roth Corp.</fullName>
            </value>
            <value>
                <fullName>Kids Headquarters</fullName>
            </value>
            <value>
                <fullName>LF Home</fullName>
            </value>
            <value>
                <fullName>Marc Fisher</fullName>
            </value>
            <value>
                <fullName>Marchon (77169)</fullName>
            </value>
            <value>
                <fullName>Marcraft</fullName>
            </value>
            <value>
                <fullName>Max Leather</fullName>
            </value>
            <value>
                <fullName>Movado</fullName>
            </value>
            <value>
                <fullName>Nourison</fullName>
            </value>
            <value>
                <fullName>Pacific Coast Feather (19648)</fullName>
            </value>
            <value>
                <fullName>Peerless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>