unpackaged/main/default/objects/Case/fields/Reason_Code_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Product_Category__c</fullName>
    <label>Reason Code Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Activewear</fullName>
            </value>
            <value>
                <fullName>Bags/Wallets</fullName>
            </value>
            <value>
                <fullName>Bottoms</fullName>
            </value>
            <value>
                <fullName>Cosmetic Products</fullName>
            </value>
            <value>
                <fullName>Dress Shirts</fullName>
            </value>
            <value>
                <fullName>Dresses/Skirts</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Fragrances</fullName>
            </value>
            <value>
                <fullName>Home Products</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Jeans/Denim</fullName>
            </value>
            <value>
                <fullName>Luggage</fullName>
            </value>
            <value>
                <fullName>Outerwear</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Shirts/Tops/Blouses/Polos</fullName>
            </value>
            <value>
                <fullName>Suiting/Formal Wear</fullName>
            </value>
            <value>
                <fullName>Sweaters/Wovens</fullName>
            </value>
            <value>
                <fullName>Swimwear</fullName>
            </value>
            <value>
                <fullName>Tops</fullName>
            </value>
            <value>
                <fullName>Underwear</fullName>
            </value>
            <value>
                <fullName>Watches/Jewelry</fullName>
            </value>
            <value>
                <fullName>Web Form Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>